<resources>
    <string name="app_name">Factory Image Checker</string>
    <string name="scheduled">Factory image checker service scheduled</string>
    <string name="shamu">shamu (Nexus 6)</string>
    <string name="angler">angler (Nexus 6P)</string>
    <string name="volantisg">volantisg (Nexus 9 LTE)</string>
    <string name="submit">Submit</string>
    <string name="notify_me_about">Notify me about:</string>
</resources>
