<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vasilev.factoryimagechecker.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/notify_me_about"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_shamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shamu"/>

        <RadioButton
            android:id="@+id/radio_angler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angler"/>

        <RadioButton
            android:id="@+id/radio_volantisg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volantisg"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:enabled="false"/>

</LinearLayout>
